--- a/CSS Text/index.html
+++ b/CSS Text/index.html
@@ -10,7 +10,7 @@
     <main>
         <h1 class="main_heading">КЛИЕНТСКАЯ ВЕБ-РАЗРАБОТКА (HTML, CSS, JAVASCRIPT)</h1>
         <p><strong class="title">Старт:</strong> идет набор</p>
-        <p><strong class="title">Цена:</strong> 12000 руб. <strike>13000 руб.</strike> (возможна оплата частями)</p>
+        <p><strong class="title">Цена:</strong> 12000 руб. <span class="strike">13000 руб.</span> (возможна оплата частями)</p>
         <p><strong class="title">Цена для студентов:</strong> 9000 руб.</p>
         <p><strong class="title">Содержание курса:</strong></p>
         <p class="text">
