--- a/CSS Text/index.html
+++ b/CSS Text/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <main>
-        <h1 class="main_heading">КЛИЕНТСКАЯ ВЕБ-РАЗРАБОТКА (HTML, CSS, JAVASCRIPT)</h1>
-        <p><strong class="title">Старт:</strong> идет набор</p>
-        <p><strong class="title">Цена:</strong> 12000 руб. <span class="strike">13000 руб.</span> (возможна оплата частями)</p>
-        <p><strong class="title">Цена для студентов:</strong> 9000 руб.</p>
-        <p><strong class="title">Содержание курса:</strong></p>
+        <h1>КЛИЕНТСКАЯ ВЕБ-РАЗРАБОТКА (HTML, CSS, JAVASCRIPT)</h1>
+        <p class="subtitle"><strong class="title">Старт:</strong> идет набор</p>
+        <p class="subtitle"><strong class="title">Цена:</strong> 12000 руб. <span class="strike">13000 руб.</span> (возможна оплата частями)</p>
+        <p class="subtitle"><strong class="title">Цена для студентов:</strong> 9000 руб.</p>
+        <p class="subtitle"><strong class="title">Содержание курса:</strong></p>
         <p class="text">
             В курсе веб-разработки мы познакомим вас с клиентской веб-разработкой, которая включает в себя верстку - обучение HTML и CSS, и написание кода на JavaScript.
             На курсе JavaScript будут рассмотрены синтаксис, типы данных, работа с DOM и событиями, стандартная библиотека языка.
