--- a/CSS Table/index.html
+++ b/CSS Table/index.html
@@ -8,48 +8,23 @@
 </head>
 <body>
     <main>
-        <table class="twitter-list">
-            <thead class="twitter-list-head">
-                <tr>
-                    <th class="twitter-list-th">First Name</th>
-                    <th class="twitter-list-th">Last Name</th>
-                    <th class="twitter-list-th">Job Title</th>
-                    <th class="twitter-list-th">Twitter</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="odd-rows">
-                    <td class="twitter-list-td">James</td>
-                    <td class="twitter-list-td">Matman</td>
-                    <td class="twitter-list-td">Chief Sandwich Eater</td>
-                    <td class="twitter-list-td">@james</td>
-                </tr>
-                <tr class="even-rows">
-                    <td class="twitter-list-td">Andor</td>
-                    <td class="twitter-list-td">Nagy</td>
-                    <td class="twitter-list-td">Designer</td>
-                    <td class="twitter-list-td">@andornagy</td>
-                </tr>
-                <tr class="odd-rows">
-                    <td class="twitter-list-td">Tamas</td>
-                    <td class="twitter-list-td">Biro</td>
-                    <td class="twitter-list-td">Game Tester</td>
-                    <td class="twitter-list-td">@tamas</td>
-                </tr>
-                <tr class="even-rows">
-                    <td class="twitter-list-td">Zoli</td>
-                    <td class="twitter-list-td">Mastah</td>
-                    <td class="twitter-list-td">Developer</td>
-                    <td class="twitter-list-td">@zoli</td>
-                </tr>
-                <tr class="odd-rows">
-                    <td class="twitter-list-td">Sqabi</td>
-                    <td class="twitter-list-td">Nagy</td>
-                    <td class="twitter-list-td">Chief Sandwich Eater</td>
-                    <td class="twitter-list-td">@sqabi</td>
-                </tr>
-            </tbody>
-        </table>
+        <h1>КЛИЕНТСКАЯ ВЕБ-РАЗРАБОТКА (HTML, CSS, JAVASCRIPT)</h1>
+        <p class="subtitle"><strong class="title">Старт:</strong> идет набор</p>
+        <p class="subtitle"><strong class="title">Цена:</strong> 12000 руб. <span class="strike">13000 руб.</span> (возможна оплата частями)</p>
+        <p class="subtitle"><strong class="title">Цена для студентов:</strong> 9000 руб.</p>
+        <p class="subtitle"><strong class="title">Содержание курса:</strong></p>
+        <p class="text">
+            В курсе веб-разработки мы познакомим вас с клиентской веб-разработкой, которая включает в себя верстку - обучение HTML и CSS, и написание кода на JavaScript.
+            На курсе JavaScript будут рассмотрены синтаксис, типы данных, работа с DOM и событиями, стандартная библиотека языка.
+        </p>
+        <p class="text">
+            В курсе JavaScript также рассматривается большое количество библиотек и средств разработки - jQuery, jQuery UI, Underscore, Vue.js,
+            Bootstrap, npm, Webpack, Less/Sass, Babel. Также обзорно рассматриваем Grunt, RequireJS, TypeScript. В качестве серверной части используем Express.js.
+            Обучение веб-разработке закрепляется на практике.
+        </p>
+        <p class="text">
+            Вы научитесь создавать клиентскую часть сайта и получите большой кругозор по клиентским технологиям.
+        </p>
     </main>
 </body>
 </html>
