--- a/CSS Table/index.html
+++ b/CSS Table/index.html
@@ -8,23 +8,48 @@
 </head>
 <body>
     <main>
-        <h1>КЛИЕНТСКАЯ ВЕБ-РАЗРАБОТКА (HTML, CSS, JAVASCRIPT)</h1>
-        <p class="subtitle"><strong class="title">Старт:</strong> идет набор</p>
-        <p class="subtitle"><strong class="title">Цена:</strong> 12000 руб. <span class="strike">13000 руб.</span> (возможна оплата частями)</p>
-        <p class="subtitle"><strong class="title">Цена для студентов:</strong> 9000 руб.</p>
-        <p class="subtitle"><strong class="title">Содержание курса:</strong></p>
-        <p class="text">
-            В курсе веб-разработки мы познакомим вас с клиентской веб-разработкой, которая включает в себя верстку - обучение HTML и CSS, и написание кода на JavaScript.
-            На курсе JavaScript будут рассмотрены синтаксис, типы данных, работа с DOM и событиями, стандартная библиотека языка.
-        </p>
-        <p class="text">
-            В курсе JavaScript также рассматривается большое количество библиотек и средств разработки - jQuery, jQuery UI, Underscore, Vue.js,
-            Bootstrap, npm, Webpack, Less/Sass, Babel. Также обзорно рассматриваем Grunt, RequireJS, TypeScript. В качестве серверной части используем Express.js.
-            Обучение веб-разработке закрепляется на практике.
-        </p>
-        <p class="text">
-            Вы научитесь создавать клиентскую часть сайта и получите большой кругозор по клиентским технологиям.
-        </p>
+        <table class="twitter-list">
+            <thead class="twitter-list-head">
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Job Title</th>
+                    <th>Twitter</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="odd-rows">
+                    <td>James</td>
+                    <td>Matman</td>
+                    <td>Chief Sandwich Eater</td>
+                    <td>@james</td>
+                </tr>
+                <tr class="even-rows">
+                    <td>Andor</td>
+                    <td>Nagy</td>
+                    <td>Designer</td>
+                    <td>@andornagy</td>
+                </tr>
+                <tr class="odd-rows">
+                    <td>Tamas</td>
+                    <td>Biro</td>
+                    <td>Game Tester</td>
+                    <td>@tamas</td>
+                </tr>
+                <tr class="even-rows">
+                    <td>Zoli</td>
+                    <td>Mastah</td>
+                    <td>Developer</td>
+                    <td>@zoli</td>
+                </tr>
+                <tr class="odd-rows">
+                    <td>Sqabi</td>
+                    <td>Nagy</td>
+                    <td>Chief Sandwich Eater</td>
+                    <td>@sqabi</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
 </body>
 </html>
