deleted extra classes

--- a/CSS Table/index.html
+++ b/CSS Table/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <table class="twitter-list">
-            <thead class="twitter-list-head">
+            <thead>
                 <tr>
                     <th>First Name</th>
                     <th>Last Name</th>
@@ -18,31 +18,31 @@
                 </tr>
             </thead>
             <tbody>
-                <tr class="odd-rows">
+                <tr>
                     <td>James</td>
                     <td>Matman</td>
                     <td>Chief Sandwich Eater</td>
                     <td>@james</td>
                 </tr>
-                <tr class="even-rows">
+                <tr>
                     <td>Andor</td>
                     <td>Nagy</td>
                     <td>Designer</td>
                     <td>@andornagy</td>
                 </tr>
-                <tr class="odd-rows">
+                <tr>
                     <td>Tamas</td>
                     <td>Biro</td>
                     <td>Game Tester</td>
                     <td>@tamas</td>
                 </tr>
-                <tr class="even-rows">
+                <tr>
                     <td>Zoli</td>
                     <td>Mastah</td>
                     <td>Developer</td>
                     <td>@zoli</td>
                 </tr>
-                <tr class="odd-rows">
+                <tr>
                     <td>Sqabi</td>
                     <td>Nagy</td>
                     <td>Chief Sandwich Eater</td>
