--- a/Gabriel/index.html
+++ b/Gabriel/index.html
@@ -39,6 +39,30 @@
                 </div>
             </div>
         </header>
+        <section>
+            <table class="order-table">
+                <thead>
+                    <tr>
+                        <th>Валидатор</th>
+                        <th>Буква</th>
+                        <th>Адрес</th>
+                        <th>Остаток ЕТ</th>
+                        <th>Сколько необходимо ешё ЕТ</th>
+                        <th>Комментарий</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="validator">421-7176-1</td>
+                        <td class="letter">А</td>
+                        <td class="address">РФ, г.Москва, ул.Усиевича, д.22, корп.1</td>
+                        <td class="balance">10</td>
+                        <td class="order-quantity"с><input type="range" /><input type="text" /></td>
+                        <td class="comment"><input type="text" /></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </main>
 </body>
 </html>
