fix JS Arrays#2

--- a/JS TempConverter/index.html
+++ b/JS TempConverter/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <div id="converter" class="converter">
+        <div class="converter">
             <input id="converter-input" class="input" type="number" placeholder="Enter degrees celsius" /><br />
             <button id="convert-button" class="button" type="button">Convert</button><br />
             <textarea id="converter-output" class="output" rows="3"  readonly></textarea>
