--- a/JS TodoList/index.html
+++ b/JS TodoList/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <title>TODO List</title>
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/mainStyles.css" />
+    <script src="scripts/events.js" defer></script>
 </head>
 <body>
-    <label>
-        Enter note
-        <input id="todo-edit" type="text" />
-    </label>
-    <button id="todo-add-button">Add note</button>
-    <ul id="todo-list"></ul>
+    <main>
+        <div class="input-container">
+            <input id="todo-edit" class="edit" type="text" placeholder="New note" maxlength="20" autofocus />
+            <button id="todo-add-button" class="button"><img src="images/add.png" alt="+"></button>
+        </div>
+        <ul id="todo-list"></ul>
+    </main>
 </body>
 </html>
