--- a/JS TempConverter/index.html
+++ b/JS TempConverter/index.html
@@ -5,15 +5,15 @@
     <title>TempConverter</title>
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/mainStyles.css" />
-    <script src="script.js" defer></script>
 </head>
 <body>
     <main>
         <div class="converter">
-            <input id="converter-input" class="input" type="number" placeholder="Enter degrees celsius" /><br />
+            <input id="converter-input" class="input" type="number" placeholder="Enter degrees celsius" autofocus/><br />
             <button id="convert-button" class="button" type="button">Convert</button><br />
             <textarea id="converter-output" class="output" rows="3"  readonly></textarea>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
