--- a/jQ PhoneBook/index.html
+++ b/jQ PhoneBook/index.html
@@ -34,10 +34,10 @@
             <button id="add-button" class="add-button btn btn-success" type="button">Add contact</button>
 
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search" aria-label="Recipient's username with two button addons" aria-describedby="button-addon4">
+                <input id="searchEdit" class="form-control" type="text" placeholder="Search" aria-label="Recipient's username with two button addons" aria-describedby="button-addon4">
                 <div class="input-group-append" id="button-addon4">
-                    <button class="btn btn-outline-secondary" type="button">Find</button>
-                    <button class="btn btn-outline-secondary" type="button">Drop</button>
+                    <button id="findButton" class="btn btn-outline-secondary" type="button">Find</button>
+                    <button id="dropButton" class="btn btn-outline-secondary" type="button">Drop</button>
                 </div>
             </div>
         </div>
