fix JS TodoList#1

--- a/JS TodoList/index.html
+++ b/JS TodoList/index.html
@@ -10,8 +10,8 @@
 <body>
     <main>
         <div class="input-container">
-            <input id="todo-edit" class="edit" type="text" placeholder="New note" maxlength="20" autofocus />
-            <button id="todo-add-button" class="button"><img src="images/add.png" alt="+"></button>
+            <input id="todo-input" class="input" type="text" placeholder="New note" maxlength="20" autofocus />
+            <button id="todo-add-button" class="button" title="Add note"><img src="images/add.png" alt="+"></button>
         </div>
         <ul id="todo-list"></ul>
     </main>
