--- a/Vue TodoList/index.html
+++ b/Vue TodoList/index.html
@@ -20,14 +20,14 @@
         <li>
             <div class='li-block'>
                 <div class='li-note'>
-                    <span class='li-span' v-text="item.text"></span>
-                    <input class='li-edit display-none' type='text' maxlength='20' autofocus />
+                    <input ref="inputItem" v-bind:class="{ hidden: !isEdit }" class='li-edit' v-model="item.text" type='text' maxlength='20' autofocus />
+                    <span v-bind:class="{ hidden: isEdit }" class='li-span' v-text="item.text"></span>
                 </div>
                 <div>
-                    <button class='button li-save-button display-none' @click="save" title='Save changes'><img src='images/save.png' alt='save'></button>
-                    <button class='button li-cancel-button display-none' @click="cancel" title='Cancel changes'><img src='images/cancel.png' alt='cancel'></button>
-                    <button class='button li-edit-button' @click="editItem" title='Edit'><img src='images/edit.png' alt='edit'></button>
-                    <button class='button li-delete-button' @click="deleteItem" title='Delete'><img src='images/remove.png' alt='remove'></button>
+                    <button v-bind:class="{ hidden: !isEdit }" class='button li-save-button' @click="save" title='Save changes'><img src='images/save.png' alt='save'></button>
+                    <button v-bind:class="{ hidden: !isEdit }" class='button li-cancel-button' @click="cancel" title='Cancel changes'><img src='images/cancel.png' alt='cancel'></button>
+                    <button v-bind:class="{ hidden: isEdit }" class='button li-edit-button' @click="editItem" title='Edit'><img src='images/edit.png' alt='edit'></button>
+                    <button v-bind:class="{ hidden: isEdit }" class='button li-delete-button' @click="deleteItem" title='Delete'><img src='images/remove.png' alt='remove'></button>
                 </div>
             </div>
         </li>
@@ -52,36 +52,45 @@
         Vue.component("todo-item", {
             data: function () {
                 return {
-                    isEdit: false
+                    isEdit: false,
+                    sourceValue: this.item.text.trim(),
+                    newValue: ""
                 }
             },
+
             props: {
                 item: {
                     type: Object,
                     required: true
                 }
             },
+
             methods: {
                 save: function () {
+                    this.newValue = this.item.text.trim()
+
+                    if (this.newValue.length === 0) {
+                        return
+                    }
+
                     this.isEdit = false
-                    alert(this.isEdit)
-                    //TODO
+                    this.sourceValue = this.newValue
                 },
+
                 cancel: function () {
                     this.isEdit = false
-                    alert(this.isEdit)
-                    //TODO
+                    this.item.text = this.sourceValue
                 },
+
                 editItem: function () {
                     this.isEdit = true
-                    alert(this.isEdit)
-                    //this.$emit("editItem", this.item);
-                    //TODO
                 },
+
                 deleteItem: function () {
-                    this.$emit("deleteItem", this.item);
+                    this.$emit("deleteItem", this.item)
                 }
             },
+
             template: "#todo-item-template"
         });
 
@@ -93,32 +102,29 @@
                     newId: 1
                 }
             },
+
             methods: {
                 addItem: function () {
                     if (this.newItemText.trim().length === 0) {
-                        return;
+                        return
                     }
 
                     this.items.push({
                         id: this.newId,
-                        text: this.newItemText
+                        text: this.newItemText.trim()
                     });
 
-                    this.newId++;
-                    this.newItemText = "";
+                    this.newId++
+                    this.newItemText = ""
                 },
-
-                //editItem: function () {
-                //    //isEdit: true
-                //    alert(isEdit)
-                //},
 
                 deleteItem: function (item) {
                     this.items = this.items.filter(function (e) {
-                        return e !== item;
+                        return e !== item
                     });
                 }
             },
+
             template: "#todo-list-template"
         });
 
